# expense-tracker

./: .editorconfig  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: .env.example  Dockerfile  pyproject.toml  seed.py
backend/app/: auth.py  categories.py  config.py  db.py  main.py  parser.py  service_auth.py
backend/app/routers/: settings.py  telegram_internal.py  transactions.py
backend/app/utils/: logging.py
backend/tests/: test_parser.py  test_transactions.py
frontend/: Dockerfile.dev  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: theme-toggle.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: amplify.ts  api.ts  colors.ts  currency.ts
infra/: .gitignore  README.md  app.py  cdk.json  package-lock.json  package.json  pyproject.toml
infra/infra/: amplify_stack.py  api_stack.py  bot_stack.py  cognito_stack.py
infra/test/: infra.test.ts
infra/tests/: test_bot_stack.py  test_cognito_stack.py
telegram-bot/: .env.example  Dockerfile  api_client.py  bot.py  config.py  pyproject.toml
