[project]
name = "infra"
version = "0.1.0"
description = "CDK app for expense-tracker: Cognito, API (Lambda), Amplify, Telegram bot EC2"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.260.0",
    "aws-cdk.aws-amplify-alpha>=2.260.0a0",
    "constructs>=10.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infra"]
